kubernetes/product/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort  
  selector:
    app: product-app
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 80
      nodePort: 30002
